libs/@local/hashql/ast/tests/ui/lowering/import-resolver/generic-argument-use-path.jsonc
//@ run: fail
//@ description: Tests that generic arguments in 'use' statements are rejected with appropriate error
["use", "kernel::type<T>", { "#tuple": ["T"] }, "_"]
//~^ ERROR Generic arguments are not allowed here
